fix(alert): incorrect link layout on mobile

--- a/packages/elvis/src/components/alert.scss
+++ b/packages/elvis/src/components/alert.scss
@@ -157,6 +157,14 @@
     gap: 0 16px;
     padding: 24px 16px;
 
+    // Links should not take the full width
+    &:has(.e-alert__actions a, .e-alert__links a) {
+      grid-template-areas:
+        'icon title'
+        'icon text'
+        'icon actions';
+    }
+
     &:not(:has(.e-alert__title)) {
       grid-template-areas:
         'icon text'
@@ -171,6 +179,10 @@
     .e-alert__links {
       margin-top: 24px;
       gap: 24px;
+
+      &:has(a) {
+        margin-top: 16px;
+      }
 
       > button {
         flex: 1;
